--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,23 @@
+defusedxml==0.7.1
+Deprecated==1.2.18
+et_xmlfile==2.0.0
+lxml==6.0.2
+Nuitka==2.8.1
+numpy==2.3.3
 odfpy==1.4.1
 openpyxl==3.1.5
+ordered-set==4.1.0
+packaging==25.0
 pandas==2.3.1
+patchelf==0.17.2.4
 pikepdf==9.9.0
+pillow==11.3.0
 PyQt6==6.9.1
+PyQt6-Qt6==6.9.2
 PyQt6_sip==13.10.2
+python-dateutil==2.9.0.post0
+pytz==2025.2
+six==1.17.0
+tzdata==2025.2
+wrapt==1.17.3
+zstandard==0.25.0
